# abecmp

./: .clang-format  .gitignore  AbeCmp.code-workspace  AbeCmpConfig.h.in  CMakeLists.txt  File.h  abecmp.cpp
src/: File.cpp  File.h  Platform.h  Timer.h  main.cpp
test_files/: Lorem_ipsum_1.txt  Random_text_1.txt  a1.txt  a2.txt  c2.txt
